        See extensions/google/experimental/resize_env.sh.
  11. Updated default Spark version to 1.2.1.
  12. Updated Spark driver memory settings to scale with VM size.
  13. Added import_env support to generate_config.  For example:
        "./bdutil -e spark -b my-bucket -p my-project generate_config my_env.sh"
        makes my_env.sh contain "import_env /path/to/spark_env.sh".


1.1.0 - 2015-01-22

  1. Added plugin for deploying Ambari/HDP with:
         ./bdutil -e platforms/hdp/ambari_env.sh deploy
  2. Set dfs.replication to 2 under conf/hadoop*/hdfs-template.xml; this suits
     PD deployments better than r=3, but if deploying with HDFS residing on
     non-PD storage, the value should be reverted to 3.
  3. Enabled Spark EventLog for Spark deployments, logging to
     gs://${CONFIGBUCKET}/spark-eventlog-base/${MASTER_HOSTNAME}
  4. Migrated off of misc deprecated fields in favor of using
     spark-defaults.conf for Spark 1.0+; cleans up warnings on spark-submit.
  5. Moved SPARK_LOG_DIR from default of ${SPARK_HOME}/logs into
     /hadoop/spark/logs so that they reside on the large PD if it exists.
  6. Upgraded default Spark version to 1.2.0.
  7. Added bdutil_env option INSTALL_JDK_DEVEL to optionally install full JDK
     with compiler/tools instead of just the minimal JRE; set to 'true' in
     single_node_env.sh and ambari_env.sh.
  8. Added python script to allocate memory more intelligently in Hadoop 2.
  9. Upgraded default Hadoop 2 version to 2.5.2.


1.0.1 - 2014-12-16

  1. Replaced usage of deprecated gcutil with gcloud compute.
  2. Changed GCE_SERVICE_ACCCOUNT_SCOPES from a comma separated list to a bash
     array.
  3. Fixed cleanup of pig-validate-setup.sh, hive-validate-setup.sh and
     spark-validate-setup.sh.
  4. Upgraded default Spark version to 1.1.1.
  5. The default zone for instances is now us-central1-a.


0.36.4 - 2014-10-17

  1. Added bdutil flags --worker_attached_pds_size_gb and